<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SplashActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/splash" />


<!--    logo view-->
    <LinearLayout
        android:id="@+id/logo_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/centerView"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:visibility="invisible">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/welcome_to"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:fontFamily="@font/sf_pro_regular"
            android:layout_marginBottom="12dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/centerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/face_id_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/face_id_view_background"
            android:orientation="vertical"
            android:paddingStart="32dp"
            android:paddingTop="18dp"
            android:paddingEnd="32dp"
            android:paddingBottom="18dp"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/face_id_img"
                android:layout_width="86dp"
                android:layout_height="86dp"
                android:layout_marginBottom="12dp"
                android:src="@drawable/face_id" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_regular"
                android:gravity="center"
                android:text="@string/face_id"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/normal_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:orientation="vertical"
            android:visibility="gone">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/roboto_bold"
                android:onClick="loginPressed"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/primary"
                android:textSize="14sp" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_bold"
                android:onClick="newUserPressed"
                android:text="@string/new_user"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/sf_pro_light"
        android:text="@string/by_wetechr" />

</RelativeLayout>