<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingDefaultResource">

    <androidx.cardview.widget.CardView
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        app:cardCornerRadius="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:fontFamily="@font/sf_pro_bold"
                android:text="@string/company_code"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/black" />


            <EditText
                android:id="@+id/et_enterCode"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="16dp"
                android:fontFamily="@font/sf_pro_regular"
                android:hint="@string/enter_code"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:textSize="13sp"
                android:lines="1"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:imeActionLabel="Done"
                android:textColor="@color/black" />
            
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/_3C3C434D"
                 />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/_3C3C434D" />

            <Button
                android:id="@+id/okBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:fontFamily="@font/sf_pro_regular"
                android:textSize="16sp"
                android:textColor="@color/_007AFF"
                android:textAllCaps="false"
                android:layout_gravity="center"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>