<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingDefaultResource">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:cardCornerRadius="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/view_with_title_background"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:background="@drawable/tv_title_background"
                    android:textSize="14sp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/signature"
                    android:textColor="@color/black_text"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="MissingClass">
                    <TextView
                        android:id="@+id/tvSignHere"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_here"
                        android:textColor="@color/_AAA6A6"
                        android:textSize="12sp"
                        android:layout_marginTop="18dp"
                        android:layout_marginBottom="20dp"
                        android:layout_marginStart="16sp"
                        android:fontFamily="@font/sf_pro_regular"
                        android:textStyle="italic"
                        android:layout_marginEnd="12dp"
                        />

                    <com.github.gcacace.signaturepad.views.SignaturePad
                        android:id="@+id/signature_pad"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        app:penColor="@android:color/black"
                        app:clearOnDoubleClick="true"
                        android:layout_alignParentTop="true"
                        />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnSaveSignature"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/sf_pro_bold"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:textAllCaps="false"
                        android:visibility="gone"
                        android:layout_below="@id/signature_pad"
                        android:text="@string/save_signature"
                        android:background="@drawable/btn_arrival_background"
                        />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnSubmitWithoutSign"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/sf_pro_bold"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:textAllCaps="false"
                        android:visibility="gone"
                        android:layout_marginBottom="16dp"
                        android:layout_below="@id/btnSaveSignature"
                        android:text="@string/submit_without_signature"
                        android:backgroundTint="@color/_E04F33"
                        android:background="@drawable/btn_arrival_background"
                        />
                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>